Add Cloud Database

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PASSWORD_AIVEN=AVNS_5KqyHSCZOF1FAcyvq7u
 DB_HOST_AIVEN=mysql-214cc8e2-zoinme.l.aivencloud.com
 DB_PORT_AIVEN=22802
 DB_NAME_AIVEN=zoinme
+PORT=6661
